--- a/configs/sample.yaml
+++ b/configs/sample.yaml
@@ -7,7 +7,7 @@ General:
     amp_level: O1
     multi_gpu_mode: ddp
     gpus: [0]
-    epoch: &epoch 30
+    epoch: &epoch 30s
     grad_acc: 2
     frozen_bn: False
     debug: False  # This value overwritten in train.py
@@ -21,8 +21,8 @@ Data:
         random_rotate_tile: False
         random_tile_white: False
         img_size: 1536
-        num_tile: 64
-        tile_size: 192
+        num_tile: 16
+        tile_size: 256
         mode_aug: True
         spiral_tile: False
         mixup: False
